[tool.poetry]
name = "emf2png"
version = "0.1.0"
description = "Simple FastAPI service that converts EMF to PNG using Inkscape"
authors = ["Adamperrr"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
python-multipart = "^0.0.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
