[tool.poetry]
name = "emf2png"
version = "0.1.0"
description = "Simple endpoint for converting EMF images to PNG format"
authors = ["Adamperrr"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
python-multipart = "^0.0.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
